[package]
name = "paya"
version = "0.1.3"
authors = ["Rogerio Pereira Araujo <rogerio.araujo@gmail.com>"]
license = "MIT"
description = "A minimum rest client based on deboa http client for rust"
homepage = "https://github.com/ararog/paya"
repository = "https://github.com/ararog/paya"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "paya"
crate-type = ["cdylib"]

[dependencies]
deboa = "0.0.9"
http = "1.4.0"
pyo3 = { version = "0.27.2", features = ["experimental-async"] }
pyo3-async-runtimes = { version = "=0.27.0", features = ["tokio-runtime"] }
url = "2.5.7"
